# daemon

./: .gitignore  Cargo.toml  README.md
crates/fwmc_derive/: Cargo.toml
crates/fwmc_game/: Cargo.toml
crates/fwmc_game/src/: player.rs
crates/fwmc_game/src/player/: input.rs
godot/: FWMC.gdextension  project.godot
godot/assets/: icon.svg.import  palette.aseprite
godot/assets/kenney/kenney_roguelike-characters/: Preview.png.import  Sample.png.import
godot/assets/kenney/kenney_roguelike-rpg-pack/: Preview.png.import  Sample1.png.import  Sample2.png.import
godot/assets/sprites/: baubau.aseprite  baubau.png.import  chibi_fuwawa-export.png.import  chibi_fuwawa.png.import  fuwawa-idle-sheet.png.import  fuwawa.png.import  icon.svg.import  logo.png.import  mococo.png.import  proto-idle-sheet.png.import
godot/assets/sprites/characters/: fuwawa.aseprite
godot/assets/sprites/kenney_roguelike-characters/: Preview.png.import  Sample.png.import
godot/assets/sprites/kenney_roguelike-rpg-pack/: Preview.png.import  Sample1.png.import  Sample2.png.import
godot/assets/themes/: default_theme.tres
godot/scenes/: game.tscn  main_menu.tscn  world.tscn  world_library.tres  world_library.tscn
godot/scenes/characters/: player.tscn
godot/scenes/old/: main_menu.tscn  old_game.tscn
godot/scenes/old/characters/: fuwawa.tscn  mococo.tscn
godot/scripts/: player.gd
godot/scripts/ui/menus/: main_menu.gd
godot/shaders/player/: body.tres  eye.tres
rust/: Cargo.toml
rust/src/: lib.rs  player.rs
rust/src/player/: facing.rs  input.rs
(+44 files in other folders)
